# rpi-light-controller

./: .tool-versions  LICENSE  Makefile  README.md
db-seed/: Dockerfile  entrypoint.sh  (+1 more)
service/: Dockerfile  pyproject.toml
service/api/: api.py  migrate.sh
service/api/db/: __init__.py  device_zones.py  devices.py  zones.py
service/api/db_migrations/versions/: 20211124T043552_init.py  20211205T185809_renamed_state_db_column_to_manual_state.py  20211206T181233_add_devices_and_zone_mappings.py
service/api/lib/: config.py  exceptions.py  rpi.py  zones.py
service/api/lib/devices/: __init__.py  particle.py
service/api/resources/: __init__.py  device_zones.py  devices.py  exceptions.py  zones.py
service/ui/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
service/ui/src/: index.html  styles.scss
service/ui/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  data.service.ts
service/ui/src/app/_components/header/: header.component.html  header.component.ts
service/ui/src/app/_services/: data.service.ts
service/ui/src/app/add-zone/: add-zone.component.html  add-zone.component.scss  add-zone.component.ts
service/ui/src/app/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
service/ui/src/app/devices/: devices.component.html  devices.component.scss  devices.component.ts
service/ui/src/app/models/: models.ts
service/ui/src/environments/: environment.ts
service/ui/src/styles/components/button/: _button.scss
service/ui/src/styles/components/card/: _card.scss
service/ui/src/styles/components/checkbox/: _checkbox.scss
service/ui/src/styles/components/chip/: _chip.scss
service/ui/src/styles/components/dialog/: _dialog.scss
service/ui/src/styles/core/: _core.scss
service/ui/src/styles/scss/: _extend.scss  _reset.scss  _variables.scss  base.scss
(+37 files in other folders)
