[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["service/api", "monitor"]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 160
multi_line_output = 3
use_parentheses = true

[tool.black]
line-length = 160

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "bad-continuation",
    "bad-whitespace",
    "fixme",
    "invalid-name",
    "missing-docstring",
    "no-member",  # disabling until this issue is resolved: https://github.com/PyCQA/pylint/issues/533
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "wrong-import-order"
]

[tool.pylint.'FORMAT']
max-branches = 15
max-line-length = 160
max-statements = 60

[tool.pytest.ini_options]
addopts = "--cov api --cov-report term-missing --cov-fail-under 80 --log-level DEBUG"

[tool.poetry]
name = "rpi-lights-controller"
version = "0.1.0"
authors = ["Alan Quillin"]
description = "A simple zoned light controller for RaspberryPi"

[tool.poetry.dependencies]
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
PyJWT = "^1.7.1"
SQLAlchemy-Utils = "^0.37.5"
Werkzeug = "^1.0.1"
alembic = "^1.6.5"
flask-cors = "^3.0.8"
dnspython = "^2.0.0"
gevent = "^20.6.2"
nanoid = "^2.0.0"
psycopg2 = "^2.9.2"
psycogreen = "^1.0.2"
python = "^3.8"
python-dateutil = "^2.8.0"
requests = "^2.24.0"
schema = "^0.7.3"
simplejson = "^3.17.2"
six = "^1.15.0"
sqlalchemy = "^1.4.17"
urllib3 = "^1.25.10"
wheel = "^0.35.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^20.8b1"
isort = "^5.4.2"
py = "^1.10.0"
pylint = "^2.6.0"
